<resources>
    <string name="app_name">Ochronniki Słuchu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add">Dodaj</string>
    <string name="sort">Sortuj</string>
    <string name="menu">Menu</string>
    <string name="delete">Usuń</string>
    <string name="dB">dB</string>
    <string name="frequency">Częstotliwość Hz</string>
    <string name="Hz_colon">Hz:</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="H">H</string>
    <string name="SNR">SNR</string>
    <string name="producer">Producent</string>
    <string name="producer_colon">Producent:</string>
    <string name="model">Model</string>
    <string name="model_colon">Model:</string>
    <string name="number125">125</string>
    <string name="number250">250</string>
    <string name="number500">500</string>
    <string name="number1k">1k</string>
    <string name="number2k">2k</string>
    <string name="number4k">4k</string>
    <string name="number8k">8k</string>
    <string name="update">Aktualizuj</string>
    <string name="update_db">Zaktualizuj bazę danych:</string>
    <string name="info_text">Aplikacja powstała z myślą o inspektorach BHP i pracownikach narażonych na hałas. Umożliwia łatwy dostęp do informacji, charakterystyk wybranych ochronników słuchu dostępnych na polskim rynku.</string>
    <string name="retrieve">Odzyskaj</string>
    <string name="retrieve_db">Odzyskaj domyślną bazę danych:</string>
    <string name="author">Adam Goszkowski 2020</string>
    <string name="mf_colon">Mf:</string>
    <string name="sf_colon">Sf:</string>
    <string name="apv_colon">APV:</string>
    <string name="earmuff">Nausznik</string>
    <string name="inserts">Wkładka</string>
    <string name="default_number">12.3</string>
    <string name="L_colon">L:</string>
    <string name="M_colon">M:</string>
    <string name="H_colon">H:</string>
    <string name="snr_colon">SNR:</string>
    <string name="numerical_data_of_sound_muted">Dane liczbowe tłumienia dźwięku</string>
    <string name="graph">Wykres</string>
    <string name="table">Tabela</string>
    <string name="current_version">Obecna wersja bazy danych:</string>
    <string name="title">Baza danych przeznaczona do programu do doboru ochronników słuchu na urządzeniu mobilnym z systemem Android</string>
    <string name="version">Ver: 1.0</string>
    <string name="base">Baza</string>
    <string name="user">Moje</string>
    <string name="info">Info</string>
</resources>
