<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="1dp"
    app:cardElevation="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/darker_gray"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:id="@+id/relativeLayoutItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">


       <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="2dp"
        android:id="@+id/imageView"
        android:contentDescription="@null" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dp"
            android:text="@string/producer"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/imageView"/>


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginStart="8dp"
            android:text="@string/model"
            android:textSize="15sp"
            android:layout_toEndOf="@+id/imageView"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:text="@string/H"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>